app/styles/globals.css
/* ... */
/* Table header styling */
.score-table th {
  background-color: darkgreen;
  /* Header background color */
  color: rgb(255, 255, 255);
  padding: 8px;
  font-weight: bold;
}

/* Table row styling */
.score-table td {
  padding: 8px;
  border-bottom: 1px solid #ddd;
  /* Light gray border for rows */
  color: rgb(0, 0, 0);
}

/* Hover effect for rows */
.score-table tr:hover {
  background-color: #f1f1f1;
  /* Light gray background on row hover */
}

.gameboard {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 95vmin;
  aspect-ratio: 1/1;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgb(4, 82, 10);
  border-radius: 20px;
  /* Add rounded corners */
  overflow: hidden;
  /* Optional: Ensures content inside respects the rounded corners */
  min-height: 500px;
  max-height: 1000px;
  z-index: 1;
}

.hand {
  border: 0px solid white;
  position: absolute;
  z-index: 10;
  width: 500px;
  height: 200px;
  background-color: lightgray;
  border-radius: 6px;
}

.hand-0 {
  border: 0px solid white;
  position: absolute;
  z-index: 10;
  width: 43%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  top: 75%;
  left: 25%;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
  align-items: center;
  /* Center child elements vertically */
  justify-content: center;
}

.hand-0-extension {
  border: 0px solid white;
  position: absolute;
  z-index: 0;
  width: 50%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  top: 75%;
  left: 25%;
}

.hand-1 {
  border: 0px solid white;
  position: absolute;
  z-index: 10;
  width: 43%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  left: 25%;
  top: 25%;
  transform: rotate(90deg);
  transform-origin: top left;
  text-align: left;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
  align-items: center;
  /* Center child elements vertically */
  justify-content: center;
}

.hand-1-extension {
  border: 0px solid white;
  position: absolute;
  z-index: 0;
  width: 50%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  left: 25%;
  top: 25%;
  transform: rotate(90deg);
  transform-origin: top left;
}

.hand-2 {
  border: 0px solid white;
  position: absolute;
  z-index: 10;
  width: 43%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  right: 25%;
  top: 5%;
  transform: rotate(180deg);
  text-align: left;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
  align-items: center;
  /* Center child elements vertically */
  justify-content: center;
}

.hand-2-extension {
  border: 0px solid white;
  position: absolute;
  z-index: 0;
  width: 50%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  right: 25%;
  top: 5%;
  transform: rotate(180deg);
}

.hand-3 {
  border: 0px solid white;
  position: absolute;
  z-index: 10;
  width: 43%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  left: 75%;
  top: 75%;
  transform: rotate(270deg);
  transform-origin: top left;
  text-align: left;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
  align-items: center;
  /* Center child elements vertically */
  justify-content: center;
}

.hand-3-extension {
  border: 0px solid white;
  position: absolute;
  z-index: 0;
  width: 50%;
  height: 20%;
  background-color: lightgray;
  border-radius: 6px;
  left: 75%;
  top: 75%;
  transform: rotate(270deg);
  transform-origin: top left;
}

.playingcard {
  height: 75%;
  aspect-ratio: 2/3;
  border-radius: 10px;
  background-color: white;
  border: 1px solid black;
  z-index: 20;
  transition: transform 0.2s ease-in-out;
  /* Smooth transition for scaling */
  justify-content: center;
  flex: 0 0 50px;
}

.playingcard:hover {
  transform: scale(1.1);
  /* Scale up on hover */
  cursor: pointer;
  z-index: 30;
  /* Bring to front on hover */
}

.playingcard-back {
  height: 75%;
  aspect-ratio: 2/3;
  border-radius: 10px;
  background-color: white;
  border: 1px solid black;
  z-index: 20;
  transition: transform 0.2s ease-in-out;
  /* Smooth transition for scaling */
  justify-content: center;
  flex: 0 0 50px;
}

.pile {
  position: absolute;
  z-index: 10;
  width: 35%;
  height: 35%;
  background-color: lightgray;
  border-radius: 6px;
  left: 32.5%;
  top: 32.5%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.playingcard-pile-0 {
  position: absolute;
  width: 45%;
  aspect-ratio: 2/3;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0);
  border: 1px solid rgba(0, 0, 0, 0);
  z-index: 20;
  transition: transform 0.2s ease-in-out;
  /* Smooth transition for scaling */
  justify-content: center;
  flex: 0 0 50px;
  left: 32.5%;
  bottom: -10%;
}

.playingcard-pile-1 {
  position: absolute;
  width: 45%;
  aspect-ratio: 2/3;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0);
  border: 1px solid rgba(0, 0, 0, 0);
  z-index: 19;
  transition: transform 0.2s ease-in-out;
  /* Smooth transition for scaling */
  justify-content: center;
  flex: 0 0 50px;
  left: 0%;
  top: 27.5%;
  transform: rotate(90deg);
}

.playingcard-pile-2 {
  position: absolute;
  width: 45%;
  aspect-ratio: 2/3;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0);
  border: 1px solid rgba(0, 0, 0, 0);
  z-index: 18;
  transition: transform 0.2s ease-in-out;
  /* Smooth transition for scaling */
  justify-content: center;
  flex: 0 0 50px;
  left: 20%;
  top: -10%;
  transform: rotate(180deg);
}
/* ... */

